--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,25 +2,25 @@ clone_depth: 10
 
 environment:
 
-  BOOST_PROG_OPTION: "C:/projects/ensmallen/\
+  BOOST_PROG_OPTION: "C:/projects/mlpack/\
   boost_program_options-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_MATH: "C:/projects/ensmallen/\
+  BOOST_MATH: "C:/projects/mlpack/\
   boost_math_c99-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_RANDOM: "C:/projects/ensmallen/\
+  BOOST_RANDOM: "C:/projects/mlpack/\
   boost_random-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_SERIALIZATION: "C:/projects/ensmallen/\
+  BOOST_SERIALIZATION: "C:/projects/mlpack/\
   boost_serialization-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  BOOST_UNIT_TEST: "C:/projects/ensmallen/\
+  BOOST_UNIT_TEST: "C:/projects/mlpack/\
   boost_unit_test_framework-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
-  ARMADILLO_INCLUDE: "C:/projects/ensmallen/armadillo-7.800.2/include"
-  ARMADILLO_LIBRARY: "C:/projects/ensmallen/armadillo-7.800.2/\
+  ARMADILLO_INCLUDE: "C:/projects/mlpack/armadillo-7.800.2/include"
+  ARMADILLO_LIBRARY: "C:/projects/mlpack/armadillo-7.800.2/\
   build/Debug/armadillo.lib"
-  BLAS_LIBRARY: "C:/projects/ensmallen/OpenBLAS.0.2.14.1/lib/native/lib/x64/\
+  BLAS_LIBRARY: "C:/projects/mlpack/OpenBLAS.0.2.14.1/lib/native/lib/x64/\
   libopenblas.dll.a"
   MLPACK_DIR: "C:/projects/mlpack"
   MLPACK_LIBRARY: "C:/projects/mlpack/build/Release/mlpack.lib"
   MLPACK_INCLUDE: "C:/projects/mlpack/build/include"
-  BOOST_INCLUDE: "C:/projects/ensmallen/boost.1.60.0.0/lib/native/include"
+  BOOST_INCLUDE: "C:/projects/mlpack/boost.1.60.0.0/lib/native/include"
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       VSVER: Visual Studio 14 2015 Win64
@@ -56,11 +56,11 @@ build_script:
   # build mlpack
   - cd C:\projects\mlpack
   - mkdir boost_libs
-  - ps: cp ${env:BOOST_PROG_OPTION} C:\projects\ensmallen\boost_libs\
-  - ps: cp ${env:BOOST_MATH} C:\projects\ensmallen\boost_libs\
-  - ps: cp ${env:BOOST_RANDOM} C:\projects\ensmallen\boost_libs\
-  - ps: cp ${env:BOOST_SERIALIZATION} C:\projects\ensmallen\boost_libs\
-  - ps: cp ${env:BOOST_UNIT_TEST} C:\projects\ensmallen\boost_libs\
+  - ps: cp ${env:BOOST_PROG_OPTION} C:\projects\mlpack\boost_libs\
+  - ps: cp ${env:BOOST_MATH} C:\projects\mlpack\boost_libs\
+  - ps: cp ${env:BOOST_RANDOM} C:\projects\mlpack\boost_libs\
+  - ps: cp ${env:BOOST_SERIALIZATION} C:\projects\mlpack\boost_libs\
+  - ps: cp ${env:BOOST_UNIT_TEST} C:\projects\mlpack\boost_libs\
   - if not exist armadillo.tar.xz appveyor DownloadFile "http://sourceforge.net/projects/arma/files/armadillo-7.800.2.tar.xz" -FileName armadillo.tar.xz
   - 7z x armadillo.tar.xz -so | 7z x -si -ttar > nul
   - cd armadillo-7.800.2 && mkdir build && cd build
@@ -68,10 +68,10 @@ build_script:
     cmake -G "Visual Studio 14 2015 Win64"
     -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY%
     -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY%
-    -DCMAKE_PREFIX:FILEPATH="C:/projects/ensmallen/armadillo"
+    -DCMAKE_PREFIX:FILEPATH="C:/projects/mlpack/armadillo"
     -DBUILD_SHARED_LIBS=OFF
     -DCMAKE_BUILD_TYPE=Release ..
-  - cd C:\projects\ensmallen && mkdir build && cd build
+  - cd C:\projects\mlpack && mkdir build && cd build
   - >
     cmake -G "Visual Studio 14 2015 Win64"
     -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY%
@@ -79,7 +79,7 @@ build_script:
     -DARMADILLO_INCLUDE_DIR=%ARMADILLO_INCLUDE%
     -DARMADILLO_LIBRARY:FILEPATH=%ARMADILLO_LIBRARY%
     -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE%
-    -DBOOST_LIBRARYDIR:PATH="C:/projects/ensmallen/boost_libs"
+    -DBOOST_LIBRARYDIR:PATH="C:/projects/mlpack/boost_libs"
     -DDEBUG=OFF
     -DPROFILE=OFF
     -DBUILD_PYTHON_BINDINGS=OFF
@@ -90,7 +90,7 @@ build_script:
   - >
     7z a mlpack-windows.zip
     "C:/projects/mlpack/build/Release/*.*"
-    "C:/projects/ensmallen/OpenBLAS.0.2.14.1/lib/native/lib/x64/*.*"
+    "C:/projects/mlpack/OpenBLAS.0.2.14.1/lib/native/lib/x64/*.*"
 
   # build models
   - cd C:\projects\models && mkdir build && cd build
