--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ env:
 
 before_install:
   - sudo apt-get update -qq
-  - travis_wait 30 sudo add-apt-repository ppa:boost-latest/ppa
-  - sudo apt-get update
-  - sudo apt-get install -qq libopenblas-dev liblapack-dev g++ libboost-all-dev
+  - sudo add-apt-repository ppa:boost-latest/ppa
+  - travis_retry sudo apt-get update
+  - travis_wait 30 sudo apt-get install -qq libopenblas-dev liblapack-dev g++ libboost-all-dev
   - if [ $ARMADILLO == "latest" ]; then
       curl https://ftp.fau.de/macports/distfiles/armadillo/`curl https://ftp.fau.de/macports/distfiles/armadillo/ -- | grep '.tar.xz' | sed 's/^.*<a href="\(armadillo-[0-9]*.[0-9]*.[0-9]*.tar.xz\)".*$/\1/' | tail -1` | tar xvJ && cd armadillo*;
     fi
@@ -25,6 +25,7 @@ install:
   - cd $TRAVIS_BUILD_DIR && mkdir build && cd build && cmake ..
 script:
   - make -j2
+  - travis_wait 30
 notifications:
   email:
     - mlpack-git@lists.mlpack.org
